Created the photo HTML and the contact HTML

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Croissant</title>
+    <title>Croissant🥐</title>
 </head>
 
 <body>
-    <a href="">Home</a>
-    <a href="">Photo</a>
-    <a href="">Contact</a>
+    <header>
+        <a href="#">Home</a>
+        <a href="#">Photo</a>
+        <a href="#">Contact</a>
+    </header>
+
     <h1>
         🥐 Croissant 🥐
     </h1>
