Added the links to each pages and the links to CSS

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Croissant🥐</title>
+    <link rel="stylesheet" href="/CSS/styles.css">
+    <title>Home🥐</title>
 </head>
 
 <body>
     <header>
-        <a href="#">Home</a>
-        <a href="#">Photo</a>
-        <a href="#">Contact</a>
+        <a href="/">Home</a>
+        <a href="/photo.html">Photo</a>
+        <a href="/contact.html">Contact</a>
     </header>
 
     <h1>
-        🥐 Croissant 🥐
+        🥐Croissant 🥐
     </h1>
 
     <p>It is a buttery, flaky, viennoiserie pastry inspired by the shape of the Austrian kipferl but using the French
