--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/styles.css">
     <title>Contact 🥐</title>
 </head>
 
 <body>
     <header>
-        <a href="#">Home</a>
-        <a href="#">Photo</a>
-        <a href="#">Contact</a>
+        <a href="/">Home</a>
+        <a href="/photo.html">Photo</a>
+        <a href="/contact.html">Contact</a>
     </header>
 
     <h1>
