Added a picture on photo.html and styled on CSS

--- a/photo.html
+++ b/photo.html
@@ -16,6 +16,8 @@
     </header>
 
     <h1>A picture of a croissant🥐</h1>
+
+    <img src="/image/croissant.jpg" alt="croissant">
 </body>
 
 </html>
