--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,8 @@
         Contact us🥐
     </h1>
     <p>
-        To contact croissant.com, please email us at <a href="#">hello@croissant.com</a> for more info
+        To contact croissant.com, please email us at <a href="mailto:hello@croissant.com">hello@croissant.com</a> for
+        more info
     </p>
 </body>
 
