--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This website introduce the best croissants to croissant lovers. ">
     <link rel="stylesheet" href="/CSS/styles.css">
-    <title>Home🥐</title>
+    <title>The best croissant in Paris - perferctcroissant.com</title>
 </head>
 
 <body>
