--- a/photo.html
+++ b/photo.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The fresh and buttery croissant makes you hungry.">
     <link rel="stylesheet" href="/CSS/styles.css">
-    <title>Photo🥐</title>
+    <title>A picture of the perferct croissant - perferctcroissant.com</title>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 
     <h1>A picture of a croissant🥐</h1>
 
-    <img src="/image/croissant.jpg" alt="croissant">
+    <img src="/image/croissant.jpg" alt="fresh croissants">
 </body>
 
 </html>
