Added SEO on the contact.html

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="please contact us if you would lik to know more about the great croissant and bakery in the city.">
     <link rel="stylesheet" href="/CSS/styles.css">
-    <title>Contact 🥐</title>
+    <title>Contact us - perferctcroissant.com</title>
 </head>
 
 <body>
