Added the titles

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-        <a href="/">Home</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/" title="Home">Home</a>
+        <a href="/photo.html" title="Croissant photo">Photo</a>
+        <a href="/contact.html" title="Contact perferctcroissant.com">Contact</a>
     </header>
 
     <h1>
