--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@
         Contact us🥐
     </h1>
     <p>
-        To contact croissant.com, please email us at <a href="mailto:hello@croissant.com"
-            class="email">hello@croissant.com</a> for
+        To contact croissant.com, please email us at <a href="mailto:hello@croissant.com" class="email"
+            title="Contact us by email">hello@croissant.com</a> for
         more info
     </p>
 </body>
